--- a/assets/scss/globals/_colors.scss
+++ b/assets/scss/globals/_colors.scss
@@ -1,9 +1,2 @@
 $white: #fff;
-$eden: #0F415D;
-$blumine: #166088;
-$boticelli: #DBE9EE;
-
-$gradient: linear-gradient(135deg, $blumine 0%, $eden 100%);
-
-$succes: #5cb85c;
-$warning: #f0ad4e;
+$bright-gray: #3B3D52;
