--- a/assets/scss/globals/_colors.scss
+++ b/assets/scss/globals/_colors.scss
@@ -1,2 +1,12 @@
 $white: #fff;
 $bright-gray: #3B3D52;
+$waterloo: #838098;
+
+$principal-gradient: linear-gradient(
+    170deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(220, 246, 246, 0.7) 30%,
+    rgba(200, 241, 241, 0.7) 50%,
+    rgba(178, 235, 235, 0.7) 70%,
+    rgba(62, 214, 221, 0.63) 100%
+);
