--- a/assets/scss/globals/_colors.scss
+++ b/assets/scss/globals/_colors.scss
@@ -5,7 +5,7 @@ $magnolia: #E9E6F0;
 $rhythm: #6B6880;
 $dark-purple: #1d1a33;
 
-$main-gradient: linear-gradient(173deg, #dcf6f6, #009ca5);
+$main-gradient: linear-gradient(173deg, #cff0f2, #17a6ae);
 
 $shadow: 0 5px 15px 0 rgba($dark-purple, 0.3);
 $shadow-hover: 0 5px 20px 0 rgba($dark-purple, 0.2);
