--- a/assets/scss/shared.scss
+++ b/assets/scss/shared.scss
@@ -58,3 +58,14 @@ fieldset {
   border: 0;
   display: block;
 }
+
+li {
+  font-family: Roboto,arial,sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.6rem;
+}
+
+ul {
+  margin: 14px 0;
+}
